[tool.poetry]
name = "example-funcy"
version = "0.1.0"
description = ""
authors = ["Jeffr-K <jeff.cofos@gmail.com>"]
readme = "README.md"
packages = [{include = "example_funcy"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
